# coyote

./: .gitignore  .loki-project.json  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  config.agent.example.yaml  config.example.yaml  config.role.example.md  graph.example.yaml  justfile  models.yaml  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: release.yaml
.sisyphus/plans/: graph-rag-spec.md  rich-markdown-renderer-tables.md  rich-markdown-renderer.md
assets/agents/.shared/: utils.sh
assets/agents/adversary/: README.md  config.yaml  tools.sh
assets/agents/code-reviewer/: README.md  config.yaml
assets/agents/coder/: README.md  config.yaml  graph.yaml
assets/agents/deep-research/: README.md  graph.yaml
assets/agents/demo/: README.md
assets/agents/explore/: README.md  config.yaml
assets/agents/file-reviewer/: README.md  config.yaml
assets/agents/librarian/: README.md  graph.yaml
assets/agents/oracle/: README.md  config.yaml
assets/agents/report-writer/: README.md  config.yaml
assets/agents/sisyphus/: README.md  config.yaml  sbx-mixin.yaml
assets/agents/step-runner/: README.md  graph.yaml
assets/functions/: mcp.json  sbx-mixin.yaml
assets/functions/scripts/: run-agent.py  (+5 more)
assets/roles/: atlassian.md  create-prompt.md  create-title.md  diagnose.md  explain-shell.md  repo-analyzer.md  shell.md  slack.md
assets/sbx-kit/: spec.yaml
deployment/homebrew/: coyote.rb.template
docs/: AGENTS.md  ENVIRONMENT-VARIABLES.md  PHASE-1-IMPLEMENTATION-PLAN.md  PHASE-2-IMPLEMENTATION-PLAN.md  PHASE-4-IMPLEMENTATION-PLAN.md  PHASE-6-IMPLEMENTATION-PLAN.md  QA-CHECKLIST.md
docs/function-calling/: CUSTOM-TOOLS.md  MCP-SERVERS.md  TOOLS.md
docs/implementation/: PHASE-1-STEP-1-NOTES.md  PHASE-1-STEP-16-NOTES.md  PHASE-1-STEP-16b-NOTES.md  PHASE-1-STEP-16c-NOTES.md  PHASE-1-STEP-16d-NOTES.md  PHASE-1-STEP-16f-NOTES.md  PHASE-1-STEP-2-NOTES.md  PHASE-1-STEP-6-NOTES.md  PHASE-1-STEP-7-NOTES.md  PHASE-1-STEP-8b-NOTES.md  PHASE-1-STEP-8c-NOTES.md  PHASE-1-STEP-8e-NOTES.md  PHASE-1-STEP-8h-NOTES.md  PHASE-1-STEP-8i-NOTES.md  PHASE-1-STEP-9-NOTES.md
docs/restful-api/: PHASE-1-FLOW-TEST-PLAN.md  PHASE-3-IMPLEMENTATION-PLAN.md  PHASE-5-IMPLEMENTATION-PLAN.md  PHASE-6-IMPLEMENTATION-PLAN.md  REST-API-ARCHITECTURE.md
docs/testing/: TEST-IMPLEMENTATION-PLAN.md
scripts/: install_coyote.ps1  install_coyote.sh
scripts/shell-integration/: integration.bash  integration.elv  integration.fish  integration.nu  integration.ps1  integration.zsh
src/: main.rs
src/cli/: completer.rs  mod.rs
src/client/: access_token.rs  azure_openai.rs  bedrock.rs  claude.rs  claude_oauth.rs  cohere.rs  common.rs  gemini.rs  gemini_oauth.rs  macros.rs  message.rs  mod.rs  model.rs  oauth.rs  openai.rs  openai_compatible.rs  openai_compatible_oauth.rs  openai_oauth.rs  stream.rs  vertexai.rs
src/config/: agent.rs  app_config.rs  app_state.rs  bridge.rs  input.rs  install_remote.rs  instructions.rs  macros.rs  mcp_factory.rs  memory.rs  mod.rs  paths.rs  prompts.rs  rag_cache.rs  request_context.rs  role.rs  session.rs  skill.rs  skill_policy.rs  skill_registry.rs  tool_scope.rs  update.rs
src/function/: memory.rs  mod.rs  skill.rs  supervisor.rs  todo.rs  user_interaction.rs
src/graph/: agent.rs  dispatch.rs  executor.rs  llm.rs  logging.rs  map.rs  mod.rs  parser.rs  progress.rs  rag.rs  reducer.rs  script.rs  staging.rs  state.rs  structured.rs  types.rs  user_interaction.rs  validator.rs
src/mcp/: mod.rs  oauth.rs  sse_transport.rs
src/parsers/: common.rs  mod.rs  python.rs  typescript.rs
src/rag/: graph.rs  mod.rs
src/render/: markdown.rs  mod.rs  stream.rs
src/repl/: completer.rs  highlighter.rs  mod.rs  prompt.rs  replay.rs
src/sandbox/: mixins.rs  mod.rs
src/supervisor/: escalation.rs  mailbox.rs  mod.rs  taskqueue.rs
src/utils/: input.rs  logs.rs  mod.rs  path.rs
src/vault/: mod.rs  utils.rs
(+101 files in other folders)
